[gd_scene load_steps=10 format=4 uid="uid://ct3n6fw6u3k08"]

[ext_resource type="Script" uid="uid://buik60ph4f6ey" path="res://Prefab/GUI/LevelEditor/OnlineLevel/LevelEditorOnlineLevel.gd" id="1"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="2"]
[ext_resource type="PackedScene" uid="uid://cdnyb8d1qw7g4" path="res://Prefab/GUI/Button/SpriteBrightButton/SpriteBrightButton.tscn" id="3"]
[ext_resource type="Shader" uid="uid://bi8x813unwm5l" path="res://Asset/Shader/ShaderBright.gdshader" id="4"]
[ext_resource type="Texture2D" uid="uid://dh3hltqj5p55x" path="res://Asset/Texture/GUI/General/General/NextButton.png" id="5"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bgkuthysw0876" path="res://Prefab/GUI/Button/NinePatchButtonBase/NinePatchButtonBase.tscn" id="7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a8y72"]
shader = ExtResource("4")
shader_parameter/brightStrength = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f70bv"]
shader = ExtResource("4")
shader_parameter/brightStrength = 0.0

[node name="LevelEditorOnlineLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="LevelGetHTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="LevelInformationGetHTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 7.0
offset_right = 225.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 48
text = "在线关卡"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageLabel" type="Label" parent="."]
unique_name_in_owner = true
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = 217.0
offset_right = 56.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "第1页，共1页"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreCustomButton" parent="PageLabel" instance=ExtResource("3")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_a8y72")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -24.0
offset_right = -50.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("5")
flip_h = true

[node name="NextCustomButton" parent="PageLabel" instance=ExtResource("3")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_f70bv")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -24.0
offset_right = 126.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("5")

[node name="LevelContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 128.0
offset_right = -80.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="LevelContainer"]
layout_mode = 2

[node name="OnlineLevelContainer" type="HFlowContainer" parent="LevelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
last_wrap_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -228.0
offset_right = 244.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelIdLineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
placeholder_text = "输入关卡ID"

[node name="EnterLevelButton" parent="HBoxContainer" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
text = "进入关卡"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = 248.0
offset_right = 111.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2

[node name="JumpPageToSpinBox" type="SpinBox" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="JumpPageToButton" parent="HBoxContainer2" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 2
text = "跳转页数"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.5
anchor_right = 0.485
anchor_bottom = 0.5
offset_left = -523.8
offset_top = 172.0
offset_right = 556.2
offset_bottom = 212.0
alignment = 1

[node name="MyCollectionButton" parent="HBoxContainer3" instance=ExtResource("7")]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "我的收藏"
downSfx = "ButtonPress"

[node name="OfficialRecommendationButton" parent="HBoxContainer3" instance=ExtResource("7")]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "官方推荐"
downSfx = "ButtonPress"

[node name="SortByTimeButton" parent="HBoxContainer3" instance=ExtResource("7")]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "按时间排序"
downSfx = "ButtonPress"

[node name="SortByNumberOfPlayedButton" parent="HBoxContainer3" instance=ExtResource("7")]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "按游玩次数排序"
downSfx = "ButtonPress"

[connection signal="request_completed" from="LevelGetHTTPRequest" to="." method="LevelGetHTTPRequestCompleted"]
[connection signal="request_completed" from="LevelInformationGetHTTPRequest" to="." method="LevelInformationGetHTTPRequestCompleted"]
[connection signal="pressed" from="PageLabel/PreCustomButton" to="." method="PreButtonPressed"]
[connection signal="pressed" from="PageLabel/NextCustomButton" to="." method="NextButtonpressed"]
[connection signal="pressed" from="HBoxContainer/EnterLevelButton" to="." method="EnterLevelButtonPressed"]
[connection signal="pressed" from="HBoxContainer2/JumpPageToButton" to="." method="JumpPageToButtonPressed"]
[connection signal="pressed" from="HBoxContainer3/MyCollectionButton" to="." method="MyCollectionButtonPressed"]
[connection signal="pressed" from="HBoxContainer3/OfficialRecommendationButton" to="." method="OfficialRecommendationButtonPressed"]
[connection signal="pressed" from="HBoxContainer3/SortByTimeButton" to="." method="SortByTimeButtonPressed"]
[connection signal="pressed" from="HBoxContainer3/SortByNumberOfPlayedButton" to="." method="SortByNumberOfPlayedButtonPressed"]
